📖 #3 - Envato Items Link Updated / ⚡ Triggered By 310e925b15468ec01beacaf81b9b6abdd5d4e568

--- a/envato/19912360.md
+++ b/envato/19912360.md
@@ -3,7 +3,7 @@ title: CF7 International SMS
 redirect_from:
     - /cf7-international-sms/
     - /envato/cf7-international-sms/
-    - /cis/
-    - /envato/cis/
+    - /cf7is/
+    - /envato/cf7is/
 redirect_to: https://codecanyon.net/item/contact-form-7-international-sms/19912360
 ---
